Fixed random scrollbars (Hopefully)

--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@
  background-position: center;
  background-size: cover;
  height: 100%;
- width: 100%;
  top: 0%;
  right: 0%;
  bottom: 0%;
